--- a/css/styles.css
+++ b/css/styles.css
@@ -9,12 +9,13 @@ html {
 
 .project-box {
   margin-left: 12%;
+  height: 95%;
 }
 
 .project-box-holder {
   background-color: gray;
   margin-left: 9%;
-  height: 15%;
+  height: 37.5%;
 }
 
 .sidebar {
@@ -33,7 +34,23 @@ body {
 }
 
 .container {
+  
   background-color: hotpink;
   width: 100%;
   height: 100%;
+}
+
+.copyright {
+  background-color: lawngreen;
+  width: 101%;
+  }
+
+.copyright h1{
+  font-size: x-small;
+  text-align: center;
+}
+
+.topbar {
+  background-color: lightblue;
+  height: 19.5%
 }
