--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 
 html {
   height: 100%;
+ 
 }
 
 .project-box {
@@ -13,7 +14,6 @@ html {
 }
 
 .project-box-holder {
-  background-color: gray;
   margin-left: 9%;
   height: 37.5%;
 }
@@ -29,25 +29,26 @@ html {
 }
 
 body {
+  background-image: url(../img/background.jpg);
   height: 100%;
   width: 100%;
+  
 }
 
 .container {
   
-  background-color: hotpink;
   width: 100%;
   height: 100%;
 }
 
 .copyright {
-  background-color: lawngreen;
   width: 101%;
   }
 
 .copyright h1{
   font-size: x-small;
   text-align: center;
+  color: rgb(163, 152, 124);
 }
 
 .topbar {
