--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,3 @@
-* {
-  border: 1px solid darkcyan;
-}
 
 
 html {
@@ -22,7 +19,6 @@ html {
   height: 100%;
   float: left;
   width: 10%;
-  background-color: greenyellow;
   padding: none;
   margin: none;
   
@@ -52,6 +48,28 @@ body {
 }
 
 .topbar {
-  background-color: lightblue;
   height: 19.5%
+}
+
+.sidebar * {
+  color: rgb(163, 152, 124);
+  text-align: center;
+}
+
+.sidebar img {
+  width: 100%;
+  height: 25%;
+  border: 1px solid rgb(163, 152, 124);
+  
+}
+
+.sidebar .row {
+  height: 5%;
+  width: 110%;
+  border: 1px solid rgb(163, 152, 124);
+}
+
+.sidebar span {
+  vertical-align: middle;
+  
 }
