--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,11 @@ html {
 .project-box {
   margin-left: 12%;
   height: 95%;
+  opacity: 80%;
+}
+
+.project-box:hover {
+  opacity: 100%;
 }
 
 .project-box-holder {
@@ -20,15 +25,15 @@ html {
   float: left;
   width: 10%;
   padding: none;
-  margin: none;
-  
+  margin: none;  
 }
 
 body {
   background-image: url(../img/background.jpg);
   height: 100%;
   width: 100%;
-  
+  color: rgb(163, 152, 124);
+  text-align: center;
 }
 
 .container {
@@ -42,19 +47,13 @@ body {
   }
 
 .copyright h1{
-  font-size: x-small;
-  text-align: center;
-  color: rgb(163, 152, 124);
+  font-size: x-small; 
 }
 
 .topbar {
   height: 19.5%
 }
 
-.sidebar * {
-  color: rgb(163, 152, 124);
-  text-align: center;
-}
 
 .sidebar img {
   width: 100%;
@@ -69,7 +68,15 @@ body {
   border: 1px solid rgb(163, 152, 124);
 }
 
-.sidebar span {
-  vertical-align: middle;
-  
+.sidebar .row p {
+  margin-top: 5%;  
+}
+
+* span {
+  font-style: italic;
+  font-size: xx-large;
+}
+
+.sidebar p:hover {
+  color: white;
 }
