--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,42 @@
-
-
 html {
   height: 100%;
  
+}
+
+body {
+  background-image: url(../img/background.jpg);
+  height: 100%;
+  width: 100%;
+  color: rgb(163, 152, 124);
+  text-align: center;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+}
+
+#topbar {
+  height: 9.5%;
+  margin-top: 2%;
+  font-weight: 700;
+  font-style: italic;
+  font-size: xx-large;
+}
+
+.spacer-bar {
+  height: 4%;
+  border: 2px solid rgb(163, 152, 124);
+  width: 82%;
+  margin-left: 14%;
+  margin-bottom: 1.5%;
+  background-color: black;
+}
+
+
+.project-box-holder {
+  margin-left: 9%;
+  height: 36.5%;
 }
 
 .project-box {
@@ -15,10 +49,6 @@ html {
   opacity: 100%;
 }
 
-.project-box-holder {
-  margin-left: 9%;
-  height: 37.5%;
-}
 
 .sidebar {
   height: 100%;
@@ -27,33 +57,6 @@ html {
   padding: none;
   margin: none;  
 }
-
-body {
-  background-image: url(../img/background.jpg);
-  height: 100%;
-  width: 100%;
-  color: rgb(163, 152, 124);
-  text-align: center;
-}
-
-.container {
-  
-  width: 100%;
-  height: 100%;
-}
-
-.copyright {
-  width: 101%;
-  }
-
-.copyright h1{
-  font-size: x-small; 
-}
-
-.topbar {
-  height: 19.5%
-}
-
 
 .sidebar img {
   width: 100%;
@@ -72,11 +75,9 @@ body {
   margin-top: 5%;  
 }
 
-* span {
-  font-style: italic;
-  font-size: xx-large;
-}
 
 .sidebar p:hover {
   color: white;
 }
+
+
