--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ body {
   width: 100%;
   color: rgb(163, 152, 124);
   text-align: center;
+  font-family: 'Times New Roman', Times, serif;
 }
 
 .container {
