--- a/css/styles.css
+++ b/css/styles.css
@@ -46,22 +46,23 @@ body {
   opacity: 80%;
 }
 
-.project-box ul {
-  float: left;
-  text-align: left;
-  width: 100%;
-  height: 70%;
-}
-
-
 h3 {
+  color: black;
   margin-top: 0px;
   margin-bottom: 0px;
 }
 
+.project-box ul {
+  color: black;
+  float: left;
+  text-align: left;
+  width: 100%;
+  height: 70%;
+  padding-left: 5%;
+}
 
 ul li {
-  padding-top: 5%;
+  padding-top: 3%;
 }
 
 .underline-bar {
@@ -75,7 +76,7 @@ ul li {
 }
 
 .project-box p {
-  margin-top: 30%;
+  margin-top: 100%;
 }
 
 .sidebar {
