added contact info links + extra quotes for pages

--- a/css/styles.css
+++ b/css/styles.css
@@ -148,6 +148,14 @@ h3 {
   padding-left: 22%;
 }
 
+.main-text a {
+  color: white;
+}
+
+.main-text a:hover {
+  color: blue;
+}
+
 #hobbies-list {
   color: white;
   width: 75%;
